--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "express": "^4.17.1",
     "js2xmlparser": "^4.0.0",
     "jsdom": "^15.1.1",
     "request": "^2.88.0",
